hphp/hack/test/typecheck/reactive/print_in_rx8.php.coeffects.exp
File "print_in_rx8.php", line 6, characters 3-9:
`echo` or `print` builtin requires the capability Output, which is not provided by the context. (Typing[4401])
  File "print_in_rx8.php", line 5, characters 20-27:
  The local (enclosing) context provides the capability set {RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "print_in_rx8.php", line 7, characters 3-6:
`echo` or `print` builtin requires the capability Output, which is not provided by the context. (Typing[4401])
  File "print_in_rx8.php", line 5, characters 20-27:
  The local (enclosing) context provides the capability set {RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "print_in_rx8.php", line 15, characters 5-8:
`echo` or `print` builtin requires the capability Output, which is not provided by the context. (Typing[4401])
  File "print_in_rx8.php", line 14, characters 23-30:
  The local (enclosing) context provides the capability set {RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "print_in_rx8.php", line 16, characters 5-11:
`echo` or `print` builtin requires the capability Output, which is not provided by the context. (Typing[4401])
  File "print_in_rx8.php", line 14, characters 23-30:
  The local (enclosing) context provides the capability set {RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
